# movieplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_DEPLOY.md  THIRD_PARTY_NOTICES.md  build.cmd  build.ps1  create_deploy.cmd  create_release.cmd  install_ai_models.cmd  install_japanese_translation_model.cmd  setup_whisper.cmd
docs/: MoviePlayer-Wiki.md
languages/: ar.lang  de.lang  en.lang  es.lang  fr.lang  hi.lang  id.lang  ja.lang  ko.lang  pt.lang  zh-CN.lang  zh-TW.lang
licenses/: BS-thread-pool-LICENSE.txt  SIMD-Utils-LICENSE.txt  avx_mathfun-LICENSE.txt  neon_mathfun-LICENSE.txt
scripts/: create_deploy.ps1  create_release.ps1  setup_japanese_translation_model.ps1  setup_native_ai_dependencies.ps1  setup_rtx_video_sdk.ps1  setup_whisper.ps1  test_random_seek.ps1  validate_languages.ps1  verify_release.ps1
src/: AudioOutput.cpp  AudioOutput.h  D3DRenderer.cpp  D3DRenderer.h  FileAssociations.cpp  FileAssociations.h  Localization.cpp  Localization.h  Main.cpp  MediaFileTools.cpp  MediaFileTools.h  MoviePlayer.rc  PlayerEngine.cpp  PlayerEngine.h  RtxVideoVsr.cpp  RtxVideoVsr.h  SubtitleTrack.cpp  SubtitleTrack.h  SubtitleWorker.cpp  SubtitleWorker.rc  Utilities.cpp  Utilities.h  Version.h.in  WhisperSubtitleJob.cpp  WhisperSubtitleJob.h  app.manifest  resource.h
src/codec/audio/: AudioDecoder.h
src/codec/audio/aac/: AacHuffman.cpp  AacHuffman.h  AacLcDecoder.cpp  AacLcDecoder.h
src/codec/audio/mp3/: MfMp3Decoder.cpp  MfMp3Decoder.h
src/codec/container/: MediaDemuxer.cpp  MediaDemuxer.h
src/codec/container/avi/: AviDemuxer.cpp  AviDemuxer.h
src/codec/container/mkv/: MkvDemuxer.cpp  MkvDemuxer.h
src/codec/container/mp4/: Mp4Demuxer.cpp  Mp4Demuxer.h
src/codec/core/: BitReader.cpp  BitReader.h  ByteReader.cpp  ByteReader.h  CodecTypes.h  RandomAccessFile.cpp  RandomAccessFile.h  ZlibInflater.cpp  ZlibInflater.h
src/codec/subtitle/: TextSubtitleDecoder.cpp  TextSubtitleDecoder.h  VobSubDecoder.cpp  VobSubDecoder.h
src/codec/video/: VideoDecoder.h
src/codec/video/h264/: MfH264Decoder.cpp  MfH264Decoder.h
src/codec/video/hevc/: D3D11HevcDecoder.cpp  D3D11HevcDecoder.h  HevcBitstreamParser.cpp  HevcBitstreamParser.h  HevcStructures.h
test-assets/: README.md
tests/: CodecSmoke.cpp
tools/: generate_app_icon.ps1
tools/whisper/: README.md
